in progress of adding notifications

--- a/popupStyling.css
+++ b/popupStyling.css
@@ -21,6 +21,11 @@ h1 {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   color: white;
+  transition: 0.72s;
+}
+
+#countdown:hover {
+  background-color: #302f2ffd;
 }
 
 .test {
@@ -78,6 +83,24 @@ h1 {
 
 .logoClass {
   margin-top: 6px;
+  --f: 0.05;
+  /* the parallax factor (the smaller the better) */
+  --r: 0px;
+  /* radius */
+
+  --_f: calc(100% * var(--f) / (1 + var(--f)));
+  --_a: calc(90deg * var(--f));
+  aspect-ratio: calc(1 + var(--f));
+  object-fit: cover;
+  clip-path: inset(0 var(--_f) 0 0 round var(--r));
+  transform: perspective(400px) var(--_t, rotateY(var(--_a)));
+  transition: 0.72s;
+  cursor: pointer;
+}
+
+.logoClass:hover {
+  clip-path: inset(0 0 0 var(--_f) round var(--r));
+  --_t: translateX(calc(-1 * var(--_f))) rotateY(calc(-1 * var(--_a)));
 }
 
 .cdColourR {
@@ -91,3 +114,6 @@ h1 {
 .cdColourW {
    color: rgb(211, 211, 211);
 }
+
+
+
